<resources>
    <string name="app_name">PFAppka</string>
    <string name="title_home">Exercises</string>
    <string name="title_about">About Me</string>
    <string name="title_event">Event Info</string>
    <string name="button_save">Save</string>
    <string name="username">Username:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="bmi">Your BMI:</string>
    <string name="add">Add</string>
    <string name="random">Random</string>
    <string name="empty"></string>
    <string name="eventTitle1">Description:</string>
    <string name="eventTitle2">Types of Exercises:</string>
    <string name="addEvent">Add Event</string>

</resources>