<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pfappka.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_event"
            app:destination="@id/navigation_event" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.example.pfappka.ui.event.EventFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event">
        <argument
            android:name="currentExercise"
            app:argType="com.example.pfappka.db.Exercise" />
        <action
            android:id="@+id/action_navigation_event_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.pfappka.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_navigation_about_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>